--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 .card {
   min-height: 80vh;
-  max-height: 5 00px;
+  max-height: 850px;
   width: 35rem;
   border-radius: 30px;
   padding: 0rem 5rem;
@@ -61,7 +61,7 @@ body {
   background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -73,7 +73,7 @@ body {
 }
 .info h1 {
   font-size: 2rem;
-  transition: all 0.75s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 .info h3 {
@@ -108,16 +108,17 @@ body {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   cursor: pointer;
-  color: #585858;
+  color: white;
   height: 5vh;
   margin: 2vh;
   min-height: 50px;
-  background-color: #80d0c7;
+  background-color: #1C2331;
 }
 
 button:hover {
-  color: white;
-  background: #585858;
+  color: #1C2331;
+  background: white;
+  transition: all 0.35s ease-out;
 }
 
 .contact {
@@ -126,13 +127,19 @@ button:hover {
   align-self: center;
   justify-content: center;
   transition: all 0.75s ease-out;
+}
 
+.contact a {
+  transition: all 0.35s ease-out;
+  align-self: center;
+  justify-content: center;
 }
 
 .contact img {
-  height: 8vh;
-  transition: all 0.75s ease-out;
-  align-self: center;
-  justify-content: center;
+  height: 7vh;
+}
 
+.contact img:hover {
+  filter: brightness(0.5);
+  cursor: pointer;
 }
