--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 }
 
 .container {
-  width: 80%;
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,6 +37,7 @@ body {
   background-color: rgb(255, 255, 255);
   background-color: #ffdee9;
   background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  background-color: #8EC5FC;
 }
 
 .display-picture {
@@ -48,6 +50,7 @@ body {
 }
 
 .display-picture img {
+  height: 12rem;
   width: 12rem;
   border-radius: 50%;
   transition: all 0.75s ease-out;
@@ -55,10 +58,9 @@ body {
 }
 
 .circle {
-  width: 15rem;
-  height: 15rem;
+  width: 14rem;
+  height: 14rem;
   background-color: #b3cdd1;
-  background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: -10;
@@ -66,6 +68,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(62deg, #d8d8d8 0%, #ffffff 100%);;
 }
 
 .info {
@@ -127,16 +130,18 @@ button:hover {
   align-self: center;
   justify-content: center;
   transition: all 0.75s ease-out;
+  padding-left: 2vh;
 }
 
 .contact a {
   transition: all 0.35s ease-out;
   align-self: center;
   justify-content: center;
+  width:8vh
 }
 
 .contact img {
-  height: 7vh;
+  height: 55px;
 }
 
 .contact img:hover {
