--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@ body {
   -webkit-perspective: 1500px;
   -moz-perspective: 1500px;
   -ms-perspective: 1500px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   transform-style: preserve-3d;
   overflow-x: hidden;
   overflow-y: hidden;
+  background: url("/images/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
@@ -39,12 +40,9 @@ body {
   width: 35rem;
   border-radius: 30px;
   padding: 0rem 5rem;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2), inset 0 0 5px #ffffff;;
   transform-style: preserve-3d;
-  background-color: rgb(255, 255, 255);
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
-  background-color: #8ec5fc;
+  background-image: linear-gradient(0deg, #1c0c42 0%, #01566c 100%);
   transform-style: preserve-3d;
 }
 
@@ -71,7 +69,6 @@ body {
   width: 14rem;
   height: 14rem;
   background-color: #b3cdd1;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: -1;
   border-radius: 50%;
@@ -80,6 +77,7 @@ body {
   align-items: center;
   background-image: linear-gradient(62deg, #d8d8d8 0%, #ffffff 100%);
   transform-style: preserve-3d;
+  box-shadow: inset 0 0 3px #d8d7d7;
 }
 
 .info {
@@ -87,27 +85,29 @@ body {
   transform-style: preserve-3d;
 }
 .info h1 {
-  font-size: 2rem;
+  font-size: 2.1rem;
   transition: all 0.5s ease-out;
   transform-style: preserve-3d;
+  color: white;
 }
 
 .info h3 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   padding: 2rem 0rem;
   color: #585858;
   font-weight: lighter;
   transition: all 0.75s ease-out;
   transform-style: preserve-3d;
+  color: white;
 }
 
 .info h4 {
   font-size: 1.2rem;
   padding: 1rem 0rem;
-  color: #585858;
   font-weight: bold;
   transition: all 0.75s ease-out;
   transform-style: preserve-3d;
+  color: white;
 }
 
 .links {
@@ -124,7 +124,7 @@ body {
   padding: 0.5rem 2rem;
   background: none;
   border: none;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2),  inset 0 0 2px #d8d7d7;;
   border-radius: 30px;
   cursor: pointer;
   color: white;
@@ -133,6 +133,8 @@ body {
   min-height: 50px;
   background-color: #1c2331;
   transform-style: preserve-3d;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 button:focus {
@@ -181,25 +183,21 @@ button:hover {
   }
   body {
     position: relative;
+    background-position: -1200px 0px;
   }
+
   .card {
-    min-height: 76vh;
-    max-height: 340px;
     width: 42vh;
     border-radius: 30px;
     padding: 0rem 5rem;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
     transform-style: preserve-3d;
-    background-color: rgb(255, 255, 255);
-    background-color: #ffdee9;
-    background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
-    background-color: #8ec5fc;
     position: absolute;
     top: 2%;
   }
 
   .display-picture {
-    min-height: 21vh;
+    min-height: 25vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -217,6 +215,13 @@ button:hover {
     height: 5vh;
   }
 
+  .circle {
+    background-image: linear-gradient(62deg, #d8d8d800 0%, #ffffff00 100%);
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2),
+      0 0px 50px rgba(255, 255, 255, 0.2);
+  }
+
   .links button {
     padding: 0.5rem 2rem;
     background: none;
@@ -224,12 +229,13 @@ button:hover {
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     cursor: pointer;
-    color: white;
+    color: black;
     height: 5vh;
     margin: 2vh;
-    background-color: #1c2331;
+    background-color: white;
     font-size: 30px;
     margin: 17px;
+    font-weight: bold;
   }
 
   .contact {
@@ -247,21 +253,23 @@ button:hover {
   }
 
   .info h1 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     transition: all 0.5s ease-out;
+    color: white;
   }
 
   .info h3 {
-    font-size: 3rem;
-    padding: 2rem 0rem;
-    color: #585858;
-    font-weight: lighter;
+    font-size: 2.5rem;
+    color: #d6d5d5;
+    font-weight: bold;
+    padding: 1rem 0rem;
     transition: all 0.75s ease-out;
   }
+
   .info h4 {
-    font-size: 3rem;
+    font-size: 2.75rem;
     padding: 2rem 0rem;
-    color: #000000;
+    color: #ffffff;
     font-weight: bold;
     transition: all 0.75s ease-out;
   }
@@ -276,7 +284,7 @@ button:hover {
     top: 35%;
     transform: translate(-50%, -50%);
     width: 150%;
-    color: red;
+    color: rgb(179, 255, 0);
     font-size: 40px;
   }
 }
