--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body {
   width: 35rem;
   border-radius: 30px;
   padding: 0rem 5rem;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2), inset 0 0 5px #ffffff;;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2),
+    inset 0 0 5px #ffffff;
   transform-style: preserve-3d;
   background-image: linear-gradient(0deg, #1c0c42 0%, #01566c 100%);
   transform-style: preserve-3d;
@@ -124,7 +125,7 @@ body {
   padding: 0.5rem 2rem;
   background: none;
   border: none;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2),  inset 0 0 2px #d8d7d7;;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2), inset 0 0 2px #d8d7d7;
   border-radius: 30px;
   cursor: pointer;
   color: white;
@@ -180,6 +181,7 @@ button:hover {
   body {
     overflow-x: hidden;
     overflow-y: hidden;
+    touch-action: none;
   }
   body {
     position: relative;
@@ -218,8 +220,8 @@ button:hover {
   .circle {
     background-image: linear-gradient(62deg, #d8d8d800 0%, #ffffff00 100%);
     background-color: rgba(255, 255, 255, 0);
-    box-shadow: 0 20px 20px rgba(255, 255, 255, 0.2),
-      0 0px 50px rgba(255, 255, 255, 0.2);
+    box-shadow: 0 20px 20px rgba(255, 255, 255, 0),
+      0 0px 50px rgba(255, 255, 255, 0);
   }
 
   .links button {
