--- a/style.css
+++ b/style.css
@@ -35,20 +35,19 @@ body {
 }
 
 .card {
-  min-height: 80vh;
-  max-height: 850px;
+  max-height: 824px;
   width: 35rem;
   border-radius: 30px;
   padding: 0rem 5rem;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2),
     inset 0 0 5px #ffffff;
   transform-style: preserve-3d;
-  background-image: linear-gradient(0deg, #1c0c42 0%, #01566c 100%);
+  background-image: linear-gradient(0deg, #32205a 0%, #01566c 100%);
   transform-style: preserve-3d;
 }
 
 .display-picture {
-  min-height: 35vh;
+  min-height: 257px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,8 +57,8 @@ body {
 }
 
 .display-picture img {
-  height: 12rem;
-  width: 12rem;
+  height: 10rem;
+  width: 10rem;
   border-radius: 50%;
   transition: all 0.75s ease-out;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
@@ -67,8 +66,8 @@ body {
 }
 
 .circle {
-  width: 14rem;
-  height: 14rem;
+  width: 12rem;
+  height: 12rem;
   background-color: #b3cdd1;
   position: absolute;
   z-index: -1;
@@ -115,10 +114,12 @@ body {
   display: flex;
   justify-content: space-between;
   transition: all 0.75s ease-out;
-  height: 9vh;
+  height: 185px;
+  min-width: 400px;
   justify-content: center;
   align-items: center;
   transform-style: preserve-3d;
+  flex-wrap: wrap;
 }
 
 .links button {
@@ -131,6 +132,7 @@ body {
   color: white;
   height: 5vh;
   margin: 2vh;
+  width: 135px;
   min-height: 50px;
   background-color: #1c2331;
   transform-style: preserve-3d;
@@ -150,18 +152,19 @@ button:hover {
 }
 
 .contact {
-  height: 25vh;
+  height: 200px;
   display: flex;
   align-self: center;
   justify-content: center;
   transition: all 0.75s ease-out;
-  padding-left: 2vh;
   transform-style: preserve-3d;
+  margin-right: 10px;
 }
 
 .contact a {
   transition: all 0.35s ease-out;
   align-self: center;
+  padding: 5px;
   justify-content: center;
 }
 
@@ -189,17 +192,22 @@ button:hover {
   }
 
   .card {
-    width: 42vh;
+    width: 100%;
+    height: 100%;
     border-radius: 30px;
     padding: 0rem 5rem;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0 0px 50px rgba(0, 0, 0, 0.2);
     transform-style: preserve-3d;
     position: absolute;
-    top: 2%;
+    top: 0;
+    border-radius: 0px;
+    max-height: 100%;
+
   }
 
+
   .display-picture {
-    min-height: 25vh;
+    min-height: 35vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,7 +221,7 @@ button:hover {
   }
 
   .links {
-    margin-top: 10vh;
+    margin-top: 5vh;
     height: 5vh;
   }
 
@@ -238,10 +246,11 @@ button:hover {
     font-size: 30px;
     margin: 17px;
     font-weight: bold;
+    min-width: 230px;
   }
 
   .contact {
-    margin-top: 5vh;
+    margin-top: 15vh;
     height: 20vh;
     display: flex;
     align-self: center;
@@ -258,6 +267,7 @@ button:hover {
     font-size: 3.5rem;
     transition: all 0.5s ease-out;
     color: white;
+    height: 250px;
   }
 
   .info h3 {
